# PRISMin

./: CMakeLists.txt  FD_Laura_sliced_flux.root  FluxTree_FHC_NearDet_smeared_0.10000000000000001_0_pileup_prange.root  FluxTree_FHC_NearDet_smeared_0.10000000000000001_0_pileup_prange100psbin.root  LICENSE  ND_Laura_sliced_flux.root  PRISMin.cxx  README.md  README_Strobo.md  Time-sliced fluxes  nuTree2GlobesFlux.C  nuTree2GlobesFlux.h  sliced-FHC-ND-binsize200-lauraflux.root  testflux.C
